# Updater

./: .gitignore  README.md  install.ps1  pyproject.toml
app/: config.py
app/ai/: __init__.py  client.py  code_fixer.py  prompts.py
app/cli/: main.py  progress.py  render.py
app/cli/commands/: history.py  migrate.py  scan.py  suggest.py  tree.py  update.py
app/core/: analyzer.py  dependency_tree.py  migrator.py  scanner.py  updater.py  version_resolver.py
app/db/: migrations.py  models.py  repository.py
app/db/alembic/: alembic.ini  env.py
app/db/alembic/versions/: 251fe4902c1e_initial_schema.py
app/parsers/: __init__.py  base.py  golang.py  java.py  nodejs.py  python.py  rust.py
app/utils/: backup.py  diff.py
tests/: conftest.py
tests/ai/: test_code_fixer.py
tests/cli/: test_progress_render.py
tests/core/: test_analyzer.py  test_dependency_tree.py  test_migrator.py  test_registries.py  test_scanner.py  test_updater.py  test_version_resolver.py
tests/db/: test_repository.py
tests/parsers/: test_golang.py  test_java.py  test_manifest_updates.py  test_nodejs.py  test_python.py  test_python_update.py  test_rust.py
tests/utils/: test_backup_and_diff.py
